--- a/ULog/ui/en.lproj/ULogLogWindowController.xib
+++ b/ULog/ui/en.lproj/ULogLogWindowController.xib
@@ -1,66 +1,143 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2548a" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11535.1" systemVersion="16B2548a" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11201"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11535.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ULogLogWindowController">
             <connections>
-                <outlet property="textView" destination="EJD-wL-LKU" id="uVY-jn-l3o"/>
-                <outlet property="window" destination="QvC-M9-y7g" id="lwA-RD-BdF"/>
+                <outlet property="textView" destination="QRk-eG-PWZ" id="2Op-fa-c0w"/>
+                <outlet property="window" destination="oSb-2r-Rbs" id="bdC-ty-gMf"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window title="ULog" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" frameAutosaveName="ULogWindow" animationBehavior="default" id="QvC-M9-y7g">
-            <windowStyleMask key="styleMask" titled="YES" miniaturizable="YES" resizable="YES"/>
+        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" frameAutosaveName="" animationBehavior="default" id="oSb-2r-Rbs">
+            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="196" y="240" width="1000" height="400"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1178"/>
             <value key="minSize" type="size" width="1000" height="400"/>
-            <view key="contentView" wantsLayer="YES" id="EiT-Mj-1SZ">
+            <view key="contentView" id="5Ee-YL-W7P">
                 <rect key="frame" x="0.0" y="0.0" width="1000" height="400"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o3k-4g-wI7">
-                        <rect key="frame" x="0.0" y="0.0" width="1000" height="400"/>
-                        <clipView key="contentView" id="J9v-Ct-fDl">
-                            <rect key="frame" x="0.0" y="0.0" width="1000" height="400"/>
+                    <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9SD-Ig-TO0">
+                        <rect key="frame" x="0.0" y="30" width="1000" height="370"/>
+                        <clipView key="contentView" id="4Mg-ff-2UL">
+                            <rect key="frame" x="0.0" y="0.0" width="1000" height="370"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <textView editable="NO" importsGraphics="NO" findStyle="panel" allowsNonContiguousLayout="YES" id="EJD-wL-LKU">
-                                    <rect key="frame" x="0.0" y="0.0" width="1000" height="400"/>
+                                <textView editable="NO" importsGraphics="NO" findStyle="panel" allowsNonContiguousLayout="YES" id="QRk-eG-PWZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="1000" height="370"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="1000" height="400"/>
-                                    <size key="maxSize" width="1006" height="10000000"/>
+                                    <size key="minSize" width="1000" height="370"/>
+                                    <size key="maxSize" width="1093" height="10000000"/>
                                     <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                     <connections>
-                                        <binding destination="-2" name="attributedString" keyPath="log" id="dW7-Cx-3am"/>
+                                        <binding destination="-2" name="attributedString" keyPath="log" id="719-kz-lgg"/>
                                     </connections>
                                 </textView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </clipView>
-                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="h7S-0K-D20">
+                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="rau-Gd-8go">
                             <rect key="frame" x="-100" y="-100" width="87" height="18"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
-                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="ew0-wr-6Hz">
-                            <rect key="frame" x="984" y="0.0" width="16" height="400"/>
+                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="LF2-cP-ChO">
+                            <rect key="frame" x="984" y="0.0" width="16" height="368"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
+                    <searchField wantsLayer="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="929-IA-7NH">
+                        <rect key="frame" x="20" y="6" width="642" height="19"/>
+                        <searchFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" usesSingleLineMode="YES" bezelStyle="round" sendsSearchStringImmediately="YES" id="0o0-E9-eJU">
+                            <font key="font" metaFont="smallSystem"/>
+                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        </searchFieldCell>
+                        <connections>
+                            <binding destination="-2" name="value" keyPath="searchText" id="4uG-rt-Nd6"/>
+                        </connections>
+                    </searchField>
+                    <button translatesAutoresizingMaskIntoConstraints="NO" id="5OM-ri-Neb">
+                        <rect key="frame" x="667" y="5" width="30" height="18"/>
+                        <buttonCell key="cell" type="check" title="C" bezelStyle="regularSquare" imagePosition="left" controlSize="small" state="on" inset="2" id="V6M-9u-jPz">
+                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                            <font key="font" metaFont="smallSystem"/>
+                        </buttonCell>
+                        <connections>
+                            <binding destination="-2" name="value" keyPath="filterShowC" id="xAE-E8-bpQ"/>
+                        </connections>
+                    </button>
+                    <button translatesAutoresizingMaskIntoConstraints="NO" id="iL8-XE-lyQ">
+                        <rect key="frame" x="700" y="5" width="45" height="18"/>
+                        <buttonCell key="cell" type="check" title="C++" bezelStyle="regularSquare" imagePosition="left" controlSize="small" state="on" inset="2" id="Zsa-7z-rw9">
+                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                            <font key="font" metaFont="smallSystem"/>
+                        </buttonCell>
+                        <connections>
+                            <binding destination="-2" name="value" keyPath="filterShowCXX" id="Ewi-wz-uBD"/>
+                        </connections>
+                    </button>
+                    <button translatesAutoresizingMaskIntoConstraints="NO" id="HLa-hc-2jg">
+                        <rect key="frame" x="748" y="5" width="85" height="18"/>
+                        <buttonCell key="cell" type="check" title="Objective-C" bezelStyle="regularSquare" imagePosition="left" controlSize="small" state="on" inset="2" id="ZCq-qP-c0M">
+                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                            <font key="font" metaFont="smallSystem"/>
+                        </buttonCell>
+                        <connections>
+                            <binding destination="-2" name="value" keyPath="filterShowOBJC" id="qw0-ei-phE"/>
+                        </connections>
+                    </button>
+                    <button translatesAutoresizingMaskIntoConstraints="NO" id="Gcu-wM-Tfr">
+                        <rect key="frame" x="836" y="5" width="100" height="18"/>
+                        <buttonCell key="cell" type="check" title="Objective-C++" bezelStyle="regularSquare" imagePosition="left" controlSize="small" state="on" inset="2" id="c40-zg-LJK">
+                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                            <font key="font" metaFont="smallSystem"/>
+                        </buttonCell>
+                        <connections>
+                            <binding destination="-2" name="value" keyPath="filterShowOBJCXX" id="wys-Vq-g3A"/>
+                        </connections>
+                    </button>
+                    <button translatesAutoresizingMaskIntoConstraints="NO" id="WRZ-nt-Val">
+                        <rect key="frame" x="939" y="5" width="43" height="18"/>
+                        <buttonCell key="cell" type="check" title="ASL" bezelStyle="regularSquare" imagePosition="left" controlSize="small" state="on" inset="2" id="iwc-SC-fqI">
+                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                            <font key="font" metaFont="smallSystem"/>
+                        </buttonCell>
+                        <connections>
+                            <binding destination="-2" name="value" keyPath="filterShowASL" id="TOl-DW-bpH"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="o3k-4g-wI7" firstAttribute="width" secondItem="EiT-Mj-1SZ" secondAttribute="width" id="KpR-6t-Elj"/>
-                    <constraint firstItem="o3k-4g-wI7" firstAttribute="height" secondItem="EiT-Mj-1SZ" secondAttribute="height" id="X4H-Da-knD"/>
-                    <constraint firstItem="o3k-4g-wI7" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="mlV-rm-YOR"/>
-                    <constraint firstItem="o3k-4g-wI7" firstAttribute="centerY" secondItem="EiT-Mj-1SZ" secondAttribute="centerY" id="un7-mv-cPe"/>
+                    <constraint firstAttribute="bottom" secondItem="929-IA-7NH" secondAttribute="bottom" constant="6" id="0Ad-3E-zqL"/>
+                    <constraint firstAttribute="bottom" secondItem="HLa-hc-2jg" secondAttribute="bottom" constant="8" id="CdJ-mm-1js"/>
+                    <constraint firstItem="5OM-ri-Neb" firstAttribute="leading" secondItem="929-IA-7NH" secondAttribute="trailing" constant="8" id="KEj-Ia-U0F"/>
+                    <constraint firstAttribute="bottom" secondItem="5OM-ri-Neb" secondAttribute="bottom" constant="8" id="NWg-k7-aZs"/>
+                    <constraint firstItem="9SD-Ig-TO0" firstAttribute="centerY" secondItem="5Ee-YL-W7P" secondAttribute="centerY" constant="-15" id="O4r-7d-qgP"/>
+                    <constraint firstItem="WRZ-nt-Val" firstAttribute="leading" secondItem="Gcu-wM-Tfr" secondAttribute="trailing" constant="8" id="PYd-ig-C1U"/>
+                    <constraint firstItem="929-IA-7NH" firstAttribute="leading" secondItem="5Ee-YL-W7P" secondAttribute="leading" constant="20" id="Pep-Jh-K1c"/>
+                    <constraint firstAttribute="bottom" secondItem="iL8-XE-lyQ" secondAttribute="bottom" constant="8" id="Q8d-HM-Aag"/>
+                    <constraint firstAttribute="bottom" secondItem="WRZ-nt-Val" secondAttribute="bottom" constant="8" id="R1F-uF-xjU"/>
+                    <constraint firstAttribute="trailing" secondItem="WRZ-nt-Val" secondAttribute="trailing" constant="20" id="WuD-gh-Pdi"/>
+                    <constraint firstItem="HLa-hc-2jg" firstAttribute="leading" secondItem="iL8-XE-lyQ" secondAttribute="trailing" constant="8" id="Wxx-9h-2sP"/>
+                    <constraint firstItem="iL8-XE-lyQ" firstAttribute="leading" secondItem="5OM-ri-Neb" secondAttribute="trailing" constant="8" id="f8a-fc-0ah"/>
+                    <constraint firstAttribute="bottom" secondItem="Gcu-wM-Tfr" secondAttribute="bottom" constant="8" id="nCO-Zp-QOo"/>
+                    <constraint firstItem="9SD-Ig-TO0" firstAttribute="width" secondItem="5Ee-YL-W7P" secondAttribute="width" id="qGO-XK-Jc1"/>
+                    <constraint firstItem="9SD-Ig-TO0" firstAttribute="centerX" secondItem="5Ee-YL-W7P" secondAttribute="centerX" id="vIw-WR-pZE"/>
+                    <constraint firstItem="Gcu-wM-Tfr" firstAttribute="leading" secondItem="HLa-hc-2jg" secondAttribute="trailing" constant="8" id="yA4-X1-FDI"/>
+                    <constraint firstItem="9SD-Ig-TO0" firstAttribute="height" secondItem="5Ee-YL-W7P" secondAttribute="height" constant="-30" id="z1t-9q-w6T"/>
                 </constraints>
             </view>
-            <point key="canvasLocation" x="87" y="110"/>
+            <contentBorderThickness minY="30"/>
+            <point key="canvasLocation" x="-257" y="-26"/>
         </window>
+        <userDefaultsController representsSharedInstance="YES" id="M8K-4z-p83"/>
     </objects>
 </document>
