--- a/Example/Interface/en.lproj/MainWindowController.xib
+++ b/Example/Interface/en.lproj/MainWindowController.xib
@@ -15,25 +15,41 @@
         <window title="ULog - Example" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="196" y="240" width="296" height="296"/>
+            <rect key="contentRect" x="196" y="240" width="296" height="337"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1178"/>
             <view key="contentView" wantsLayer="YES" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="296" height="296"/>
+                <rect key="frame" x="0.0" y="0.0" width="296" height="337"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gh1-8j-iFT">
-                        <rect key="frame" x="20" y="20" width="256" height="256"/>
+                        <rect key="frame" x="20" y="61" width="256" height="256"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="256" id="YPV-Z6-CKJ"/>
+                            <constraint firstAttribute="height" constant="256" id="cSZ-6z-UkG"/>
+                        </constraints>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" image="NSApplicationIcon" id="Lp2-LE-WiW"/>
                     </imageView>
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cT9-5z-1UO">
+                        <rect key="frame" x="108" y="13" width="81" height="32"/>
+                        <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="YhN-cV-OxT">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="startStop:" target="-2" id="RlT-1B-zpQ"/>
+                            <binding destination="-2" name="title" keyPath="buttonTitle" id="Qne-Ia-ey1"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="gh1-8j-iFT" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="FUS-da-CNx"/>
-                    <constraint firstItem="gh1-8j-iFT" firstAttribute="height" secondItem="EiT-Mj-1SZ" secondAttribute="height" constant="-40" id="SN4-46-5q3"/>
-                    <constraint firstItem="gh1-8j-iFT" firstAttribute="centerY" secondItem="EiT-Mj-1SZ" secondAttribute="centerY" id="vnl-1o-wBx"/>
-                    <constraint firstItem="gh1-8j-iFT" firstAttribute="width" secondItem="EiT-Mj-1SZ" secondAttribute="width" constant="-40" id="zHb-B4-y6D"/>
+                    <constraint firstItem="cT9-5z-1UO" firstAttribute="top" secondItem="gh1-8j-iFT" secondAttribute="bottom" constant="20" id="0B3-IS-Zua"/>
+                    <constraint firstItem="cT9-5z-1UO" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="ATD-Ar-kB5"/>
+                    <constraint firstItem="gh1-8j-iFT" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" id="AlO-mP-Ioa"/>
+                    <constraint firstAttribute="bottom" secondItem="cT9-5z-1UO" secondAttribute="bottom" constant="20" id="KOv-yY-P6h"/>
+                    <constraint firstItem="gh1-8j-iFT" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="iY1-qN-hlJ"/>
                 </constraints>
             </view>
-            <point key="canvasLocation" x="87" y="110"/>
+            <point key="canvasLocation" x="87" y="130.5"/>
         </window>
     </objects>
     <resources>
