--- a/ULog/ui/en.lproj/ULogLogWindowController.xib
+++ b/ULog/ui/en.lproj/ULogLogWindowController.xib
@@ -52,6 +52,31 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
+                    <searchField wantsLayer="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="929-IA-7NH">
+                        <rect key="frame" x="20" y="28" width="784" height="19"/>
+                        <searchFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" usesSingleLineMode="YES" bezelStyle="round" sendsSearchStringImmediately="YES" id="0o0-E9-eJU">
+                            <font key="font" metaFont="smallSystem"/>
+                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        </searchFieldCell>
+                        <connections>
+                            <binding destination="-2" name="value" keyPath="searchText" id="4uG-rt-Nd6"/>
+                        </connections>
+                    </searchField>
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Q6k-hO-IXw">
+                        <rect key="frame" x="859" y="23" width="58" height="28"/>
+                        <buttonCell key="cell" type="push" title="Pause" bezelStyle="rounded" alignment="center" controlSize="small" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="mXX-8U-a7x">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="smallSystem"/>
+                        </buttonCell>
+                    </button>
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="5Hp-uu-9LU">
+                        <rect key="frame" x="915" y="23" width="70" height="28"/>
+                        <buttonCell key="cell" type="push" title="Settings" bezelStyle="rounded" alignment="center" controlSize="small" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Oye-59-cqh">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="smallSystem"/>
+                        </buttonCell>
+                    </button>
                     <button translatesAutoresizingMaskIntoConstraints="NO" id="5OM-ri-Neb">
                         <rect key="frame" x="17" y="5" width="30" height="18"/>
                         <buttonCell key="cell" type="check" title="C" bezelStyle="regularSquare" imagePosition="left" controlSize="small" state="on" inset="2" id="V6M-9u-jPz">
@@ -182,23 +207,23 @@
                             <binding destination="-2" name="value" keyPath="filterShowDebug" id="JXf-sV-iPW"/>
                         </connections>
                     </button>
-                    <searchField wantsLayer="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="929-IA-7NH">
-                        <rect key="frame" x="20" y="28" width="960" height="19"/>
-                        <searchFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" usesSingleLineMode="YES" bezelStyle="round" sendsSearchStringImmediately="YES" id="0o0-E9-eJU">
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tmS-nC-gvx">
+                        <rect key="frame" x="807" y="23" width="54" height="28"/>
+                        <buttonCell key="cell" type="push" title="Clear" bezelStyle="rounded" alignment="center" controlSize="small" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="kIY-K4-WGF">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="smallSystem"/>
-                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                        </searchFieldCell>
-                        <connections>
-                            <binding destination="-2" name="value" keyPath="searchText" id="4uG-rt-Nd6"/>
-                        </connections>
-                    </searchField>
+                        </buttonCell>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="HLa-hc-2jg" firstAttribute="leading" secondItem="iL8-XE-lyQ" secondAttribute="trailing" constant="8" id="2Mj-8p-oEB"/>
-                    <constraint firstItem="929-IA-7NH" firstAttribute="width" secondItem="5Ee-YL-W7P" secondAttribute="width" constant="-40" id="4cb-DZ-Y7P"/>
+                    <constraint firstItem="929-IA-7NH" firstAttribute="leading" secondItem="5Ee-YL-W7P" secondAttribute="leading" constant="20" id="3SA-aD-MmV"/>
+                    <constraint firstItem="tmS-nC-gvx" firstAttribute="leading" secondItem="929-IA-7NH" secondAttribute="trailing" constant="8" id="3hQ-4t-Uju"/>
+                    <constraint firstAttribute="trailing" secondItem="5Hp-uu-9LU" secondAttribute="trailing" constant="20" id="6Ku-3W-pJo"/>
+                    <constraint firstItem="Ruc-K9-jRe" firstAttribute="top" secondItem="5Hp-uu-9LU" secondAttribute="bottom" constant="9" id="6v0-yX-kZ5"/>
                     <constraint firstAttribute="bottom" secondItem="5OM-ri-Neb" secondAttribute="bottom" constant="8" id="7w1-iY-MAU"/>
                     <constraint firstItem="5yP-yD-Dcg" firstAttribute="bottom" secondItem="IWB-Xu-xC6" secondAttribute="bottom" id="83L-dg-uUf"/>
+                    <constraint firstItem="tmS-nC-gvx" firstAttribute="centerY" secondItem="Q6k-hO-IXw" secondAttribute="centerY" id="8YK-fi-cEw"/>
                     <constraint firstItem="9PN-6C-SZh" firstAttribute="bottom" secondItem="6ed-bB-KN5" secondAttribute="bottom" id="BTp-q2-bdI"/>
                     <constraint firstItem="Glc-So-Vrj" firstAttribute="bottom" secondItem="5yP-yD-Dcg" secondAttribute="bottom" id="C9t-Pl-Vd5"/>
                     <constraint firstItem="5OM-ri-Neb" firstAttribute="top" secondItem="929-IA-7NH" secondAttribute="bottom" constant="8" id="Cl3-Gf-dbF"/>
@@ -206,11 +231,14 @@
                     <constraint firstItem="Ruc-K9-jRe" firstAttribute="leading" secondItem="IWB-Xu-xC6" secondAttribute="trailing" constant="8" id="FGq-cH-5Id"/>
                     <constraint firstItem="Sl0-YG-4oQ" firstAttribute="bottom" secondItem="9PN-6C-SZh" secondAttribute="bottom" id="KLP-vl-Ens"/>
                     <constraint firstItem="9PN-6C-SZh" firstAttribute="leading" secondItem="Sl0-YG-4oQ" secondAttribute="trailing" constant="8" id="OrL-C4-GCD"/>
+                    <constraint firstItem="5Hp-uu-9LU" firstAttribute="leading" secondItem="Q6k-hO-IXw" secondAttribute="trailing" constant="8" id="P0t-SC-V8a"/>
                     <constraint firstItem="Sl0-YG-4oQ" firstAttribute="leading" secondItem="OCL-Bm-Vwm" secondAttribute="trailing" constant="8" id="Qch-JG-XsS"/>
                     <constraint firstItem="iL8-XE-lyQ" firstAttribute="leading" secondItem="5OM-ri-Neb" secondAttribute="trailing" constant="8" id="S6t-cc-DsS"/>
                     <constraint firstItem="WRZ-nt-Val" firstAttribute="leading" secondItem="Gcu-wM-Tfr" secondAttribute="trailing" constant="8" id="Te7-bE-IoM"/>
                     <constraint firstItem="Gcu-wM-Tfr" firstAttribute="bottom" secondItem="HLa-hc-2jg" secondAttribute="bottom" id="U1R-Vp-VTZ"/>
+                    <constraint firstItem="Q6k-hO-IXw" firstAttribute="leading" secondItem="tmS-nC-gvx" secondAttribute="trailing" constant="8" id="UMw-bb-RbJ"/>
                     <constraint firstItem="9SD-Ig-TO0" firstAttribute="centerX" secondItem="5Ee-YL-W7P" secondAttribute="centerX" id="V0F-Xy-trZ"/>
+                    <constraint firstItem="Q6k-hO-IXw" firstAttribute="centerY" secondItem="5Hp-uu-9LU" secondAttribute="centerY" id="Y6H-uQ-of4"/>
                     <constraint firstItem="6ed-bB-KN5" firstAttribute="leading" secondItem="9PN-6C-SZh" secondAttribute="trailing" constant="8" id="aWa-rI-auy"/>
                     <constraint firstItem="IWB-Xu-xC6" firstAttribute="bottom" secondItem="Ruc-K9-jRe" secondAttribute="bottom" id="cPm-PO-BuA"/>
                     <constraint firstItem="5yP-yD-Dcg" firstAttribute="leading" secondItem="Glc-So-Vrj" secondAttribute="trailing" constant="8" id="d5t-MO-B3T"/>
@@ -218,6 +246,7 @@
                     <constraint firstItem="5OM-ri-Neb" firstAttribute="leading" secondItem="5Ee-YL-W7P" secondAttribute="leading" constant="20" id="f21-Nm-erK"/>
                     <constraint firstItem="WRZ-nt-Val" firstAttribute="bottom" secondItem="Gcu-wM-Tfr" secondAttribute="bottom" id="iJO-vU-4Mz"/>
                     <constraint firstItem="OCL-Bm-Vwm" firstAttribute="bottom" secondItem="Sl0-YG-4oQ" secondAttribute="bottom" id="iZT-Gs-heH"/>
+                    <constraint firstItem="929-IA-7NH" firstAttribute="centerY" secondItem="Q6k-hO-IXw" secondAttribute="centerY" id="jAk-No-xfG"/>
                     <constraint firstAttribute="bottom" secondItem="Ruc-K9-jRe" secondAttribute="bottom" constant="8" id="jf8-lW-hst"/>
                     <constraint firstItem="9SD-Ig-TO0" firstAttribute="height" secondItem="5Ee-YL-W7P" secondAttribute="height" constant="-55" id="kxc-df-wMq"/>
                     <constraint firstAttribute="trailing" secondItem="Ruc-K9-jRe" secondAttribute="trailing" constant="20" id="lZI-ng-c0r"/>
@@ -227,7 +256,6 @@
                     <constraint firstItem="Gcu-wM-Tfr" firstAttribute="leading" secondItem="HLa-hc-2jg" secondAttribute="trailing" constant="8" id="t79-uG-vvW"/>
                     <constraint firstItem="HLa-hc-2jg" firstAttribute="bottom" secondItem="iL8-XE-lyQ" secondAttribute="bottom" id="v4D-zD-gW0"/>
                     <constraint firstItem="Glc-So-Vrj" firstAttribute="leading" secondItem="6ed-bB-KN5" secondAttribute="trailing" constant="8" id="wCr-ny-dwf"/>
-                    <constraint firstItem="929-IA-7NH" firstAttribute="centerX" secondItem="5Ee-YL-W7P" secondAttribute="centerX" id="zdP-BO-u5s"/>
                 </constraints>
             </view>
             <contentBorderThickness minY="55"/>
