Font can now be changed.

--- a/ULog/ui/en.lproj/ULogSettingsWindowController.xib
+++ b/ULog/ui/en.lproj/ULogSettingsWindowController.xib
@@ -41,11 +41,14 @@
                                 <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cwf-1I-tnz">
                                     <rect key="frame" x="59" y="19" width="234" height="22"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                    <textFieldCell key="cell" lineBreakMode="truncatingMiddle" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" bezelStyle="round" id="ezn-Hn-vBW">
-                                        <font key="font" metaFont="system"/>
+                                    <textFieldCell key="cell" lineBreakMode="truncatingMiddle" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" bezelStyle="round" id="ezn-Hn-vBW">
+                                        <font key="font" metaFont="smallSystem"/>
                                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     </textFieldCell>
+                                    <connections>
+                                        <binding destination="-2" name="value" keyPath="fontDescription" id="0sY-C8-jXY"/>
+                                    </connections>
                                 </textField>
                                 <button focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WsB-Qz-LyT">
                                     <rect key="frame" x="295" y="13" width="87" height="32"/>
@@ -54,6 +57,9 @@
                                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                         <font key="font" metaFont="system"/>
                                     </buttonCell>
+                                    <connections>
+                                        <action selector="chooseFont:" target="-2" id="UTA-ck-0eP"/>
+                                    </connections>
                                 </button>
                             </subviews>
                         </view>
